// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendIdentify destination action: all fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": "mV[ZQcEVgZO$MX",
        "context": Object {
          "consent": Object {
            "categoryPreferences": Object {
              "analytics": true,
              "marketing": false,
            },
          },
        },
        "groupId": "mV[ZQcEVgZO$MX",
        "integrations": Object {
          "All": false,
        },
        "messageId": "mV[ZQcEVgZO$MX",
        "timestamp": "2021-02-01T00:00:00.000Z",
        "traits": Object {
          "testType": "mV[ZQcEVgZO$MX",
        },
        "type": "identify",
        "userId": "mV[ZQcEVgZO$MX",
      },
    ],
  },
  "output": "Action Executed",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendIdentify destination action: required fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": "mV[ZQcEVgZO$MX",
        "context": Object {
          "consent": Object {
            "categoryPreferences": Object {
              "analytics": true,
              "marketing": false,
            },
          },
        },
        "groupId": "mV[ZQcEVgZO$MX",
        "integrations": Object {
          "All": false,
        },
        "messageId": "mV[ZQcEVgZO$MX",
        "timestamp": undefined,
        "traits": Object {},
        "type": "identify",
        "userId": "mV[ZQcEVgZO$MX",
      },
    ],
  },
  "output": "Action Executed",
}
`;
